syntax = "proto3";

package api.user;

import "google/api/annotations.proto";

option go_package = "api-training-go/api/user;user";
option java_multiple_files = true;
option java_package = "api.user";

service User {
	// 用户注册接口
	rpc Register (RegisterRequest) returns (RegisterResponse) {
		option (google.api.http) = {
			post: "/user/register",
			body: "*"
		};
	}
	// 用户登录接口
	rpc Login (LoginRequest) returns (LoginResponse) {
		option (google.api.http) = {
			post: "/user/login",
			body: "*"
		};
	}
	// 批量获取用户信息
	rpc MGet (MGetRequest) returns (MGetResponse) {
		option (google.api.http) = {
			post: "/user/mget",
			body: "*"
		};
	}
}

// 用户注册参数
message RegisterRequest {
	// 用户名
	string name = 1;
	// 昵称
	string nickName = 2;
	// 密码
	string password = 3;
	// 重复密码
	string password2 = 4;
}

// 用户注册返回
message RegisterResponse {
	// 响应码
	uint32 code = 1;
	// 提示
	string message = 2;
	// data
	message RegisterData {

	}
	// data
	RegisterData data = 3;
}

// 用户登录参数
message LoginRequest {
	// 用户名
	string name = 1;
	// 密码
	string password = 2;
}

// 用户登录返回
message LoginResponse {
	// 响应码
	uint32 code = 1;
	// 提示
	string message = 2;
	// data
	message LoginData {
		// token
		string token = 1;
		// 过期时间
		uint64 expire = 2;
	}
	LoginData data = 3;
}

message UserModel {
	uint64 id = 1;
	string name = 2;
}

message MGetRequest {
	repeated uint64 uids = 1;
}

message MGetResponse {
	// 响应码
	uint32 code = 1;
	// 提示
	string message = 2;
	// 返回
	map<uint64, UserModel> data = 3;
}